# claude-founder-kit

./: .env.example  .gitignore  CLAUDE.md  GETTING_STARTED.md  Makefile  README.md  TRUST.md  VALIDATION.md  VALUE_BAR.md  requirements.txt
companions/: README.md  registry.json
cost/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pricing.json  requirements.txt  run.py
day0/: CLAUDE.md  Makefile  README.md  demo.py  mcp_agent_example.md  trust_checklist.md
first_hour/: .env.example  CLAUDE.md  Makefile  README.md  check.py  requirements.txt  transcript.md
idea/: .gitignore  CLAUDE.md  Makefile  README.md
launch/: .env.example  .gitignore  CLAUDE.md  FOUNDER_ACTIVATION_FIELD_GUIDE.md  Makefile  PLATFORM_COVERAGE.md  README.md  STARTUP_ACTIVATION_PLAYBOOK.md  morning_read.py  requirements.txt
mvp/: .gitignore  CLAUDE.md  Makefile  README.md
pilot_check/: CLAUDE.md  Makefile  README.md  demo.py  mcp_agent_example.md  pilot_checklist.md
quality/: .desloprc.example  .doccheck.json  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
quality/.claude-plugin/: marketplace.json  plugin.json
quality/.github/workflows/: ci.yml
quality/deslop/: __init__.py  __main__.py  judge.py  rules.py
quality/examples/: clean.md  sloppy.md  sloppy_landing.html
quality/scripts/: sync.py
quality/skills/deslop/: SKILL.md
quality/tests/: test_rules.py
receipts/: README.md
scale/: .gitignore  CLAUDE.md  Makefile  README.md
scripts/: check_companions.py  check_value_bar.py  companion_registry.py
(+214 files in other folders)
